# 2601B-Debug-GPU-kernel-on-linux

./: 2601B-TopDebug.pptx  README.md
2601B-TopDebug/: main.cu  mem.cu  pp.py  pp2.py
TopDebug/: CMakeLists.txt  kernel.cu  kernel.h
TopDebug/vscode/: launch.json  tasks.json
